2002-03-14  Simon Waters <simon@wretched.demon.co.uk>

	* Fix memory leak HashTab

2002-03-06  Simon Waters <simon@wretched.demon.co.uk>

	* Make "book on" use BOOKPREFER not BOOKBEST

	* Fix implementation of BOOKBEST

	* Implement "book {worst|best|prefer}"

	* Correct README as it said not Official distro

2002-03-05  Simon Waters <simon@wretched.demon.co.uk>

	* Remove redundant tests from configure.ac

	* Update version to 5.04 in configure.ac

	* Move local m4 macros to acinclude.m4

2002-03-03  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* common.h: Refine check for buggy gcc 2.95 on PPC.

	* common.h: Changed lzArray and BitCount from short to unsigned
	  char, corresponding prototypes for leadz() and nbits(), too.

	* inlines.h and util.c: Changed leadz() and nbits() to not use
	  union, rather do explicit bit arithmetic which does not assume
	  anything on endianness.

	* test.c: Changed all timings to floating point and higher
	  precision.

2002-03-03  Simon Waters <simon@wretched.demon.co.uk>

	* Added unknown protocol commands to
	  avoid "Illegal move: <unknown command>"

	* sd synonym for depth

	* Added approximate st and additional errors for xboard
	  suggested by Tim Mann

	* Added basic "hint" feature, by extracting next
	  move from PV in hash. Doesn't work in book.

2002-03-02  Simon Waters <simon@wretched.demon.co.uk>

	* Modified code to print "Illegal move: cmd" when
	  an illegal move or unknown command is entered.

2002-02-26  Simon Waters <simon@wretched.demon.co.uk>

	* Hacked version of ac_need_stdint_h AC macro to fix Win32 build

GNU Chess 5.03 Released

2002-02-12  Simon Waters <simon@wretched.demon.co.uk>

	* Fix bug with saving move after mate in PGN files

2002-02-09  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* book.c: Checked for calloc() failure to return BOOK_ENOMEM
	in BookBuilderOpen().

	* iterate.c: Changed search time calculation to a very
	non-aggressive strategy (keep always 2 seconds for possible