@@ -1,3 +1,11 @@
+2002-05-02  Simon Waters <simon@wretched.demon.co.uk>
+
+	* Insert pinned and hanging piece checks
+
+	* Remove unreachable code in cmd.c
+
+	* Update some eval weightings
+
 2002-03-14  Simon Waters <simon@wretched.demon.co.uk>
 
 	* Fix memory leak HashTab
